Basic GameView system up and running

--- a/Jarrett/src/Jarrett/Jarrett.csproj
+++ b/Jarrett/src/Jarrett/Jarrett.csproj
@@ -135,13 +135,19 @@
     </Compile>
     <Compile Include="Core\GameActor.cs" />
     <Compile Include="Core\GameComponent.cs" />
+    <Compile Include="Core\GameState.cs" />
+    <Compile Include="Core\IGame.cs" />
+    <Compile Include="Core\IGameView.cs" />
+    <Compile Include="Core\IResourceManager.cs" />
+    <Compile Include="JarrettResourceManager.cs" />
     <Compile Include="Core\MessageBus.cs" />
     <Compile Include="Core\Messages.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Core\JarrettGame.cs" />
+    <Compile Include="JarrettGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MainMenuView.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -179,9 +185,7 @@
       <Project>{DE6937C4-6E2F-4C83-A39B-F5E2305610C9}</Project>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v4.0\Microsoft.Xna.GameStudio.Content.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
