Finished process management on game class
Finished process management and added to game class. Also moved Message
Processing into a new MessageProcessor process.

--- a/Jarrett/src/Jarrett/Jarrett.csproj
+++ b/Jarrett/src/Jarrett/Jarrett.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Core\IGame.cs" />
     <Compile Include="Core\IGameView.cs" />
     <Compile Include="Core\IResourceManager.cs" />
+    <Compile Include="Core\MessageProcessor.cs" />
     <Compile Include="Core\Process.cs" />
     <Compile Include="Core\ProcessManager.cs" />
     <Compile Include="JarrettResourceManager.cs" />
