--- a/Project Acorn/Assembly-CSharp.csproj
+++ b/Project Acorn/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CardBehavior.cs" />
+     <Compile Include="Assets\Scripts\GameLogicBehavior.cs" />
      <Compile Include="Assets\ex2D\_demo\Scripts\Player.cs" />
      <Compile Include="Assets\ex2D\_demo\Scripts\ScrollView.cs" />
      <Compile Include="Assets\ex2D\_demo\Scripts\SpAnimEventHandle.cs" />
