--- a/Project Acorn/Assembly-CSharp.csproj
+++ b/Project Acorn/Assembly-CSharp.csproj
@@ -49,12 +49,14 @@
      <Compile Include="Assets\Scripts\GameOver\GameOverBehavior.cs" />
      <Compile Include="Assets\Scripts\Menu\PlayButtonBehavior.cs" />
      <Compile Include="Assets\Scripts\MessageBus.cs" />
+     <Compile Include="Assets\Scripts\MovementBehavior.cs" />
      <Compile Include="Assets\Scripts\Playing\CardBehavior.cs" />
      <Compile Include="Assets\Scripts\Playing\GameLogicBehavior.cs" />
      <Compile Include="Assets\Scripts\Playing\HoldButtonBehavior.cs" />
      <Compile Include="Assets\Scripts\Playing\PlayerMessageBehavior.cs" />
      <Compile Include="Assets\Scripts\Playing\ScoreBehavior.cs" />
      <Compile Include="Assets\Scripts\ProcessManager.cs" />
+     <Compile Include="Assets\Scripts\WrapAroundBehavior.cs" />
      <Compile Include="Assets\ex2D\_demo\Scripts\Player.cs" />
      <Compile Include="Assets\ex2D\_demo\Scripts\ScrollView.cs" />
      <Compile Include="Assets\ex2D\_demo\Scripts\SpAnimEventHandle.cs" />
