--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -127,13 +127,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcornResourceManager.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\MovementBehavior.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="AcornGame.cs" />
+    <Compile Include="Hiromi\Background.cs" />
+    <Compile Include="Hiromi\BehaviorComponent.cs" />
+    <Compile Include="Hiromi\Processing\BoundsCheckingProcess.cs" />
+    <Compile Include="Hiromi\GameObject.cs" />
+    <Compile Include="Hiromi\Processing\ActionProcess.cs" />
+    <Compile Include="Hiromi\Processing\DelayProcess.cs" />
+    <Compile Include="Hiromi\GameObjectService.cs" />
+    <Compile Include="Hiromi\GraphicsService.cs" />
+    <Compile Include="Hiromi\Messaging\Message.cs" />
+    <Compile Include="Hiromi\Messaging\MessageService.cs" />
+    <Compile Include="Hiromi\Messaging\OffScreenMessage.cs" />
+    <Compile Include="Hiromi\Processing\Process.cs" />
+    <Compile Include="Hiromi\Processing\ProcessManager.cs" />
+    <Compile Include="Hiromi\Processing\ProcessState.cs" />
+    <Compile Include="Hiromi\Screen.cs" />
+    <Compile Include="Hiromi\ScreenManager.cs" />
+    <Compile Include="Hiromi\Sprite.cs" />
+    <Compile Include="Objects\Cloud.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
   </ItemGroup>
@@ -202,12 +222,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Jarrett\Jarrett.csproj">
-      <Project>{bdf3821f-463b-489a-973c-72012697be83}</Project>
-      <Name>Jarrett</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
