--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -133,35 +133,10 @@
     </Compile>
     <Compile Include="Behaviors\CardBehavior.cs" />
     <Compile Include="Behaviors\PlayerControllerBehavior.cs" />
-    <Compile Include="Hiromi\Behaviors\CommonButtonBehavior.cs" />
-    <Compile Include="Hiromi\Behaviors\MovementBehavior.cs" />
-    <Compile Include="Hiromi\Behaviors\WrapAroundScreenBehavior.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="AcornGame.cs" />
-    <Compile Include="Hiromi\Background.cs" />
-    <Compile Include="Hiromi\GameObjectBehavior.cs" />
-    <Compile Include="Hiromi\ContentService.cs" />
-    <Compile Include="Hiromi\Messaging\ButtonMessages.cs" />
-    <Compile Include="Hiromi\Messaging\KeyboardMessages.cs" />
-    <Compile Include="Hiromi\Messaging\MouseMessages.cs" />
-    <Compile Include="Hiromi\Processing\BoundsCheckingProcess.cs" />
-    <Compile Include="Hiromi\GameObject.cs" />
-    <Compile Include="Hiromi\Processing\ActionProcess.cs" />
-    <Compile Include="Hiromi\Processing\DelayProcess.cs" />
-    <Compile Include="Hiromi\GameObjectService.cs" />
-    <Compile Include="Hiromi\GraphicsService.cs" />
-    <Compile Include="Hiromi\Messaging\Message.cs" />
-    <Compile Include="Hiromi\Messaging\MessageService.cs" />
-    <Compile Include="Hiromi\Messaging\OffScreenMessage.cs" />
-    <Compile Include="Hiromi\Processing\InputProcess.cs" />
-    <Compile Include="Hiromi\Processing\Process.cs" />
-    <Compile Include="Hiromi\Processing\ProcessManager.cs" />
-    <Compile Include="Hiromi\Processing\ProcessState.cs" />
-    <Compile Include="Hiromi\Screen.cs" />
-    <Compile Include="Hiromi\ScreenManager.cs" />
-    <Compile Include="Hiromi\Sprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
   </ItemGroup>
@@ -231,7 +206,12 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Hiromi.WindowsStore\Hiromi.WindowsStore.csproj">
+      <Project>{4dcb809e-533c-4268-9090-7e1030e2752e}</Project>
+      <Name>Hiromi.WindowsStore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
   </PropertyGroup>
