Added initial Hiromi support + MainScreen

--- a/FunPhysics/FunPhysics/FunPhysics.csproj
+++ b/FunPhysics/FunPhysics/FunPhysics.csproj
@@ -133,8 +133,9 @@
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Game1.cs" />
+    <Compile Include="FunPhysicsGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\MainScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -164,6 +165,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Hiromi.WindowsStore\Hiromi.WindowsStore.csproj">
+      <Project>{4dcb809e-533c-4268-9090-7e1030e2752e}</Project>
+      <Name>Hiromi.WindowsStore</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
