Added basic movement and bouncing of screen edge behavior

--- a/FunPhysics/FunPhysics/FunPhysics.csproj
+++ b/FunPhysics/FunPhysics/FunPhysics.csproj
@@ -130,6 +130,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\BounceOffScreenEdgeBehavior.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
