--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -131,9 +131,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Behaviors\CardBehavior.cs" />
     <Compile Include="Behaviors\GameLogicBehavior.cs" />
-    <Compile Include="Behaviors\PlayerControllerBehavior.cs" />
     <Compile Include="Behaviors\ScoreBehavior.cs" />
     <Compile Include="Behaviors\SquirrelControllerBehavior.cs" />
     <Compile Include="Components\CardComponent.cs" />
@@ -145,6 +143,8 @@
     <Compile Include="MessagesFromPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
+    <Compile Include="Systems\GameLogicSystem.cs" />
+    <Compile Include="Systems\PlayerControlSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
