Changed scoring meter to acorns

--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -220,6 +220,10 @@
       <Link>Content\Sprites\PlayButtonPressed.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\Dummy\bin\Windows Phone\Debug\AcornContent\Sprites\AcornEmpty.xnb">
+      <Link>Content\Sprites\AcornEmpty.xnb</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Acorn_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
