--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -132,7 +132,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\CardComponent.cs" />
+    <Compile Include="Components\GameStatusComponent.cs" />
     <Compile Include="Components\HudComponent.cs" />
+    <Compile Include="Components\PlayerControllerComponent.cs" />
     <Compile Include="Components\ScoreComponent.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
@@ -145,9 +147,6 @@
     <Compile Include="Screens\MenuScreen.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
     <Compile Include="Systems\GameLogicSystem.cs" />
-    <Compile Include="Systems\HudSystem.cs" />
-    <Compile Include="Systems\PlayerControlSystem.cs" />
-    <Compile Include="Systems\VisualizationSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
