--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcornAssets.cs" />
+    <Compile Include="AcornHumanView.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -145,7 +146,7 @@
     <Compile Include="Screens\GameOverScreen.cs" />
     <Compile Include="Screens\MenuScreen.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
-    <Compile Include="Systems\GameLogicSystem.cs" />
+    <Compile Include="GameLogicSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
