--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -143,9 +143,9 @@
     <Compile Include="MessagesFromGameLogic.cs" />
     <Compile Include="MessagesFromPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screens\GameOverScreen.cs" />
-    <Compile Include="Screens\MenuScreen.cs" />
-    <Compile Include="Screens\PlayScreen.cs" />
+    <Compile Include="States\GameOverState.cs" />
+    <Compile Include="States\MenuState.cs" />
+    <Compile Include="States\PlayState.cs" />
     <Compile Include="GameLogicSystem.cs" />
   </ItemGroup>
   <ItemGroup>
