--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -136,7 +136,7 @@
     </Compile>
     <Compile Include="Components\CardComponent.cs" />
     <Compile Include="Components\GameStatusComponent.cs" />
-    <Compile Include="Components\PlayerControllerComponent.cs" />
+    <Compile Include="PlayerController.cs" />
     <Compile Include="Components\ScoreComponent.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
