--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -288,10 +288,15 @@
       <Link>Content\Sounds\ButtonSelect.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Acorn_TemporaryKey.pfx" />
-    <Content Include="Content\Sounds\SelectCard.xnb">
+    <Content Include="..\Dummy\bin\Windows Phone\Debug\AcornContent\Sounds\SelectCard.xnb">
+      <Link>Content\Sounds\SelectCard.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\Dummy\bin\Windows Phone\Debug\AcornContent\Sounds\Applause.xnb">
+      <Link>Content\Sounds\Applause.xnb</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="Acorn_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.png" />
