--- a/Acorn/Acorn/Acorn.csproj
+++ b/Acorn/Acorn/Acorn.csproj
@@ -131,7 +131,9 @@
   <ItemGroup>
     <Compile Include="AcornAssets.cs" />
     <Compile Include="Components\PlayerAvatarComponent.cs" />
+    <Compile Include="ComputerPlayerController.cs" />
     <Compile Include="DebugController.cs" />
+    <Compile Include="IController.cs" />
     <Compile Include="States\AboutState.cs" />
     <Compile Include="States\PlayerSelectState.cs" />
     <Compile Include="Views\AboutHumanView.cs" />
@@ -144,7 +146,7 @@
     </Compile>
     <Compile Include="Components\CardComponent.cs" />
     <Compile Include="Components\GameStatusComponent.cs" />
-    <Compile Include="PlayerController.cs" />
+    <Compile Include="HumanPlayerController.cs" />
     <Compile Include="Components\ScoreComponent.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
