--- a/Mulgrew/Mulgrew/Mulgrew.csproj
+++ b/Mulgrew/Mulgrew/Mulgrew.csproj
@@ -133,8 +133,9 @@
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Game1.cs" />
+    <Compile Include="MulgrewGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\PlayScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -162,6 +163,13 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\HiromiSubmodule\Hiromi.WindowsStore\Hiromi.WindowsStore.csproj">
+      <Project>{4dcb809e-533c-4268-9090-7e1030e2752e}</Project>
+      <Name>Hiromi.WindowsStore</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
   </PropertyGroup>
