--- a/rust-rl/Cargo.toml
+++ b/rust-rl/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Jason Olson <jolson88@outlook.com>"]
 [dependencies]
 env_logger = "0.5.13"
 log = "0.4.0"
+rand = "0.3.9"
 
 [dependencies.ggez]
 version = "0.4"
